SERVER-83399 requests for the cleanup/compact coordinator fail with a StaleConfig error if the collection is sharded or unsplittable (#17378)

GitOrigin-RevId: 47e673af1dba5bd9cee9de1b9d67b9bcb0e3880d