src/mongo/s/commands/cluster_fle2_compact_cmd.cpp
@@ -130,7 +130,7 @@ Cmd::Reply Cmd::Invocation::typedRun(OperationContext* opCtx) {
     }
 
     auto response = uassertStatusOK(
-        executeCommandAgainstDatabasePrimary(
+        executeDDLCoordinatorCommandAgainstDatabasePrimary(
             opCtx,
             nss.dbName(),
             dbInfo,
